--- a/Views/Articles/Edit.cshtml
+++ b/Views/Articles/Edit.cshtml
@@ -4,7 +4,8 @@
     ViewData["Title"] = "Edit";
 }
 
-<form asp-action="Edit">
+
+<form asp-action="Edit" method="post" enctype="multipart/form-data">
     <div class="row">
         <div class="col-md-4">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -15,31 +16,22 @@
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Row" class="control-label"></label>
-                <input asp-for="Row" class="form-control" />
-                <span asp-validation-for="Row" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="Category" class="control-label"></label>
                 <input asp-for="Category" class="form-control" />
                 <span asp-validation-for="Category" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="Row" class="control-label"></label>
+                <input asp-for="Row" class="form-control" />
+                <span asp-validation-for="Row" class="text-danger"></span>
+            </div>
         </div>
-        <div class="col-md-4 pull-right">       
-            <div class="form-group">
-                <label asp-for="Picture" class="control-label"></label>
-                <input asp-for="Picture" class="form-control" />
+        <div class="col-md-4 pull-right">
+
+            <div class="form-group pull-right">
+                <img src="~/@Model.Picture" alt="Alternate Text" width="200" height="200" />
+                <input type="file" name="files" width="200" height="200" multiple />
                 <span asp-validation-for="Picture" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CreatedDate" class="control-label"></label>
-                <input asp-for="CreatedDate" class="form-control" readonly="readonly" />
-                <span asp-validation-for="CreatedDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="UpdateDate" class="control-label"></label>
-                <input asp-for="UpdateDate" class="form-control" readonly="readonly" />
-                <span asp-validation-for="CreatedDate" class="text-danger"></span>
             </div>
         </div>
     </div>
@@ -48,14 +40,34 @@
         <textarea asp-for="Content" id="editor"></textarea>
         <span asp-validation-for="Content" class="text-danger"></span>
     </div>
-    <div class="form-group">
-        <input type="submit" value="Save" class="btn btn-default" />
+    <div class="col-md-12">
+        <div class="form-group col-md-8">
+            <input type="submit" value="Save" class="btn btn-success" />
+        </div>
+        <div class="col-md-4 pull-right">
+            <dl class="dl-horizontal">
+
+                <dt>
+                    @Html.DisplayNameFor(model => model.CreatedDate)
+                </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.CreatedDate)
+                </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.UpdateDate)
+                </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.UpdateDate)
+                </dd>
+            </dl>
+        </div>
     </div>
 </form>
 
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
+
 @section ScriptsRichTextEditor
     {
 
