--- a/Views/Blogs/Delete.cshtml
+++ b/Views/Blogs/Delete.cshtml
@@ -1,10 +1,8 @@
 ﻿@model BrainStorm.Models.Article
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Delete";
 }
-
-<h2>Details</h2>
 
 <div>
     <h4>Article</h4>
@@ -71,8 +69,10 @@
             @Html.DisplayFor(model => model.PostCategory)
         </dd>
     </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    
+    <form asp-action="Delete">
+        <input type="hidden" asp-for="Id" />
+        <input type="submit" value="Delete" class="btn btn-default" /> |
+        <a asp-action="Index">Back to List</a>
+    </form>
 </div>
