--- a/Views/Tutorials/Details.cshtml
+++ b/Views/Tutorials/Details.cshtml
@@ -1,12 +1,9 @@
 ﻿@model BrainStorm.Models.Article
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Details";
 }
 
-<h2>Delete</h2>
-
-<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Article</h4>
     <hr />
@@ -72,10 +69,8 @@
             @Html.DisplayFor(model => model.PostCategory)
         </dd>
     </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+</div>
+<div>
+    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
+    <a asp-action="Index">Back to List</a>
 </div>
