--- a/Views/Tutorials/Create.cshtml
+++ b/Views/Tutorials/Create.cshtml
@@ -4,12 +4,11 @@
     ViewData["Title"] = "Create";
 }
 
-<form asp-action="Create">
+<form asp-action="Create"  method="post" enctype="multipart/form-data">
     <div class="row">
         <div class="col-md-4">
-
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div>
+            <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
                 <input asp-for="Title" class="form-control" />
                 <span asp-validation-for="Title" class="text-danger"></span>
@@ -19,26 +18,43 @@
                 <input asp-for="Category" class="form-control" />
                 <span asp-validation-for="Category" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Picture" class="control-label"></label>
-                <input asp-for="Picture" class="form-control" />
+        </div>
+        <div class="col-md-4 pull-right">
+
+            <div class="form-group pull-right">               
+                <input type="file" name="files" width="200" height="200" multiple />
                 <span asp-validation-for="Picture" class="text-danger"></span>
             </div>
         </div>
-
     </div>
-   
     <div class="form-group">
         <label asp-for="Content" class="control-label"></label>
         <textarea asp-for="Content" id="editor"></textarea>
         <span asp-validation-for="Content" class="text-danger"></span>
     </div>
+    <div class="col-md-12">
+        <div class="form-group col-md-8">
+            <input type="submit" value="Save" class="btn btn-success" />
+        </div>
+        <div class="col-md-4 pull-right">
+            <dl class="dl-horizontal">
 
-    <div class="form-group">
-        <input type="submit" value="Create" class="btn btn-success" />
+                <dt>
+                    @Html.DisplayNameFor(model => model.CreatedDate)
+                </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.CreatedDate)
+                </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.UpdateDate)
+                </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.UpdateDate)
+                </dd>
+            </dl>
+        </div>
     </div>
 </form>
-
 
 <div>
     <a asp-action="Index">Back to List</a>
@@ -46,10 +62,13 @@
 
 @section ScriptsRichTextEditor
     {
+
     <script type="text/javascript" src="~/ckeditor/ckeditor.js"></script>
     <script type="text/javascript">CKEDITOR.replace('editor');</script>
     <script type="text/javascript">CKEDITOR.config.skin = 'kama'</script>
     <script type="text/javascript">CKEDITOR.config.language = 'az'</script>
+    <script type="text/javascript">CKEDITOR.config.filebrowserImageUploadUrl = "../wwwroot"</script>
+
 }
 
 @*@section Scripts {
