--- a/Views/Shared/_sidebar.cshtml
+++ b/Views/Shared/_sidebar.cshtml
@@ -26,10 +26,9 @@
 
         <ul class="sidebar-menu" data-widget="tree">
             <li> @Html.ActionLink("Home", "Index", "Admin")</li>
-            <li> @Html.ActionLink("User", "Index", "Users")</li>
+            <li> @Html.ActionLink("User", "Index", "User")</li>
             <li> @Html.ActionLink("Tutorial", "Index", "Tutorials")</li>
             <li> @Html.ActionLink("Blog", "Index", "Blogs")</li>
-            <li> @Html.ActionLink("Setting", "Index", "Setting")</li>
         </ul>
     </section>
 </aside>
