--- a/Views/Tutorials/Create.cshtml
+++ b/Views/Tutorials/Create.cshtml
@@ -4,7 +4,8 @@
     ViewData["Title"] = "Create";
 }
 
-<form asp-action="Create"  method="post" enctype="multipart/form-data">
+
+<form asp-action="Create" method="post" enctype="multipart/form-data">
     <div class="row">
         <div class="col-md-4">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -21,8 +22,9 @@
         </div>
         <div class="col-md-4 pull-right">
 
-            <div class="form-group pull-right">               
-                <input type="file" name="files" width="200" height="200" multiple />
+            <div class="form-group pull-right">
+                <img src="" id="previewImage" alt="Alternate Text" width="200" height="200" />
+                <input type="file" id="uploadImage" name="files" width="200" height="200" multiple />
                 <span asp-validation-for="Picture" class="text-danger"></span>
             </div>
         </div>
@@ -69,8 +71,18 @@
     <script type="text/javascript">CKEDITOR.config.language = 'az'</script>
     <script type="text/javascript">CKEDITOR.config.filebrowserImageUploadUrl = "../wwwroot"</script>
 
+    <script>
+        function readURL(input) {
+            if (input.files && input.files[0]) {
+                var reader = new FileReader();
+                reader.onload = function (e) {
+                    $('#previewImage').attr('src', e.target.result);
+                }
+                reader.readAsDataURL(input.files[0]);
+            }
+        }
+        $("#uploadImage").change(function () {
+            readURL(this);
+        });
+    </script>
 }
-
-@*@section Scripts {
-        @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-    }*@
