--- a/Views/Tutorials/Create.cshtml
+++ b/Views/Tutorials/Create.cshtml
@@ -23,7 +23,7 @@
         <div class="col-md-4 pull-right">
 
             <div class="form-group pull-right">
-                <img src="" id="previewImage" alt="Alternate Text" width="200" height="200" />
+                <img src="~/images/article/default_article.jpg" id="previewImage" alt="Alternate Text" width="200" height="200" />
                 <input type="file" id="uploadImage" name="files" width="200" height="200" multiple />
                 <span asp-validation-for="Picture" class="text-danger"></span>
             </div>
