--- a/Views/User/Index.cshtml
+++ b/Views/User/Index.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Users";
 }
-
+    @ViewData["Message"];
 
 <a class="btn btn-success" asp-action="Edit" asp-route-id="@Model.Id">Edit</a>
 
