--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -7,15 +7,15 @@ scratch. This page gets rid of all links and provides the needed markup only.
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>AdminLTE 2 | Starter</title>
+    <title>@ViewData["Title"]</title>
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-    <link rel="stylesheet" href="~/Admin/bower_components/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="~/Admin/bower_components/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="~/Admin/bower_components/Ionicons/css/ionicons.min.css">
-    <link rel="stylesheet" href="~/Admin/dist/css/AdminLTE.min.css">
-    <link rel="stylesheet" href="~/Admin/dist/css/skins/skin-blue.min.css">
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <link rel="stylesheet" href="~/Admin/bower_components/bootstrap/dist/css/bootstrap.min.css" asp-append-version="true">
+    <link rel="stylesheet" href="~/Admin/bower_components/font-awesome/css/font-awesome.min.css" asp-append-version="true">
+    <link rel="stylesheet" href="~/Admin/bower_components/Ionicons/css/ionicons.min.css" asp-append-version="true">
+    <link rel="stylesheet" href="~/Admin/dist/css/AdminLTE.min.css" asp-append-version="true">
+    <link rel="stylesheet" href="~/Admin/dist/css/skins/skin-blue.min.css" asp-append-version="true">
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js" asp-append-version="true"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js" asp-append-version="true"></script>
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
 
@@ -44,9 +44,9 @@ scratch. This page gets rid of all links and provides the needed markup only.
         <div class="control-sidebar-bg"></div>
     </div>
 
-    <script src="~/Admin/bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="~/Admin/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="~/Admin/dist/js/adminlte.min.js"></script>
+    <script src="~/Admin/bower_components/jquery/dist/jquery.min.js" asp-append-version="true"></script>
+    <script src="~/Admin/bower_components/bootstrap/dist/js/bootstrap.min.js" asp-append-version="true"></script>
+    <script src="~/Admin/dist/js/adminlte.min.js" asp-append-version="true"></script>
 
     @RenderSection("ScriptsRichTextEditor", false)
 
