--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -1,5 +1,5 @@
 @using Microsoft.AspNetCore.Identity
-@using BrainStorm.Models
+@using BrainStorm.Models.System
 
 @inject SignInManager<BrainStormUser> SignInManager
 @inject UserManager<BrainStormUser> UserManager
