--- a/Views/Shared/_header.cshtml
+++ b/Views/Shared/_header.cshtml
@@ -120,7 +120,7 @@
                         <!-- The user image in the navbar-->
                         <img src="~/Admin/dist/img/avatar.png" class="user-image" alt="User Image">
                         <!-- hidden-xs hides the username on small devices so only the image appears. -->
-                        <span class="hidden-xs">Kamran/span>
+                        <span class="hidden-xs">Kamran </span>
                     </a>
                     <ul class="dropdown-menu">
                         <!-- The user image in the menu -->
