--- a/Views/Tutorials/Create.cshtml
+++ b/Views/Tutorials/Create.cshtml
@@ -69,6 +69,7 @@
     <script type="text/javascript">CKEDITOR.replace('editor');</script>
     <script type="text/javascript">CKEDITOR.config.skin = 'kama'</script>
     <script type="text/javascript">CKEDITOR.config.language = 'az'</script>
+    <script type="text/javascript">CKEDITOR.config.height = '350'</script>
     <script type="text/javascript">CKEDITOR.config.filebrowserImageUploadUrl = "../wwwroot"</script>
 
     <script>
