--- a/Views/Blogs/Create.cshtml
+++ b/Views/Blogs/Create.cshtml
@@ -20,8 +20,8 @@
                 <span asp-validation-for="Category" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Picture" class="control-label"></label>
-                <input asp-for="Picture" class="form-control" />
+                <img src="~/images/article/default_article.jpg" id="previewImage" alt="Alternate Text" width="200" height="200" />
+                <input type="file" id="uploadImage" name="files" width="200" height="200" multiple />
                 <span asp-validation-for="Picture" class="text-danger"></span>
             </div>
         </div>
@@ -50,5 +50,21 @@
     <script type="text/javascript">CKEDITOR.replace('editor');</script>
     <script type="text/javascript">CKEDITOR.config.skin = 'kama'</script>
     <script type="text/javascript">CKEDITOR.config.language = 'az'</script>
+    <script type="text/javascript">CKEDITOR.config.height = '350'</script>
+    <script type="text/javascript">CKEDITOR.config.filebrowserImageUploadUrl = "../wwwroot"</script>
 
+    <script>
+        function readURL(input) {
+            if (input.files && input.files[0]) {
+                var reader = new FileReader();
+                reader.onload = function (e) {
+                    $('#previewImage').attr('src', e.target.result);
+                }
+                reader.readAsDataURL(input.files[0]);
+            }
+        }
+        $("#uploadImage").change(function () {
+            readURL(this);
+        });
+    </script>
 }
