--- a/Views/Blogs/Edit.cshtml
+++ b/Views/Blogs/Edit.cshtml
@@ -30,8 +30,8 @@
         <div class="col-md-4 pull-right">
 
             <div class="form-group pull-right">
-                <img src="~/@Model.Picture" alt="Alternate Text" width="200" height="200" />
-                <input type="file" name="files" width="200" height="200" multiple />
+                <img src="~/@Model.Picture" id="previewImage" alt="Alternate Text" width="200" height="200" />
+                <input type="file" id="uploadImage" name="files" width="200" height="200" multiple />
                 <span asp-validation-for="Picture" class="text-danger"></span>
             </div>
         </div>
@@ -76,6 +76,21 @@
     <script type="text/javascript">CKEDITOR.replace('editor');</script>
     <script type="text/javascript">CKEDITOR.config.skin = 'kama'</script>
     <script type="text/javascript">CKEDITOR.config.language = 'az'</script>
+    <script type="text/javascript">CKEDITOR.config.height = '350'</script>
     <script type="text/javascript">CKEDITOR.config.filebrowserImageUploadUrl = "../wwwroot"</script>
 
+    <script>
+        function readURL(input) {
+            if (input.files && input.files[0]) {
+                var reader = new FileReader();
+                reader.onload = function (e) {
+                    $('#previewImage').attr('src', e.target.result);
+                }
+                reader.readAsDataURL(input.files[0]);
+            }
+        }
+        $("#uploadImage").change(function () {
+            readURL(this);
+        });
+    </script>
 }
