--- a/ClientApp/src/app/common/header/header.component.html
+++ b/ClientApp/src/app/common/header/header.component.html
@@ -8,7 +8,10 @@
     </li>
     <li>
       <a routerLink="about" routerLinkActive="active">About</a>
-    </li> 
+    </li>
+    <li>
+      <a routerLink="admin" routerLinkActive="active" target="_parent">Login</a>
+    </li>
   </ul>
 </header>
 
