--- a/ClientApp/src/app/tutorial/tutorial.component.html
+++ b/ClientApp/src/app/tutorial/tutorial.component.html
@@ -1,3 +1,9 @@
+<ul *ngFor="let tutorial of tutorials">
+  <li>{{tutorial.id}}</li>
+  <li>{{tutorial.title}}</li>
+  <li>{{tutorial.content}}</li>
+</ul>
+
 <header>
   <div style="width: 25%;display: inline-block; vertical-align: top;">
     <ul class="header-ul">
