--- a/ClientApp/src/app/tutorial/tutorial.component.html
+++ b/ClientApp/src/app/tutorial/tutorial.component.html
@@ -1,60 +1,14 @@
-<ul *ngFor="let tutorial of tutorials">
-  <li>{{tutorial.id}}</li>
-  <li>{{tutorial.title}}</li>
-  <li>{{tutorial.content}}</li>
-</ul>
+<div style="width: 25%;display: inline-block; vertical-align: top;">
 
-<header>
-  <div style="width: 25%;display: inline-block; vertical-align: top;">
-    <ul class="header-ul">
-      <li>
-        <a routerLink="html" routerLinkActive="active">Html</a>
-      </li>
-      <li>
-        <a routerLink="css" routerLinkActive="active">Css</a>
-      </li>
-      <li>
-        <a routerLink="javascript" routerLinkActive="active">JavaScript</a>
-      </li>
-      <li>
-        <a routerLink="jquery" routerLinkActive="active">JQuery</a>
-      </li>
-    </ul>
-  </div>
-  <div style="width: 25%;display: inline-block; vertical-align: top;">
-    <ul class="header-ul">
-      <li>
-        <a routerLink="php" routerLinkActive="active">PHP</a>
-      </li>
-      <li>
-        <a routerLink="laravel" routerLinkActive="active">Laravel</a>
-      </li>
-    </ul>
-  </div>
-  <div style="width: 25%;display: inline-block; vertical-align: top;">
-    <ul class="header-ul">
-      <li>
-        <a routerLink="sql" routerLinkActive="active">SQL</a>
-      </li>
-      <li>
-        <a routerLink="mysql" routerLinkActive="active">Mysql</a>
-      </li>
-      <li>
-        <a routerLink="mssql" routerLinkActive="active">MsSql</a>
-      </li>
-      <li>
-        <a routerLink="oraclesql" routerLinkActive="active">Oracle SQL</a>
-      </li>
-    </ul>
-  </div>
-  <div style="width: 25%;display: inline-block; vertical-align: top;">
-    <ul class="header-ul">
-      <li>
-        <a routerLink="ingilis" routerLinkActive="active">Ingilis Dili</a>
-      </li>
-      <li>
-        <a routerLink="rus" routerLinkActive="active">Rus Dili</a>
-      </li>
-    </ul>
-  </div>
-</header>
+  <ul *ngFor="let tutorial of tutorials">
+    <a routerLink="{{tutorial.id}}" routerLinkActive="active">{{tutorial.title}}</a>
+    <li>{{tutorial.content}}</li>
+  </ul>
+
+  <ul class="header-ul">
+    <li>
+      <a routerLink="html" routerLinkActive="active">Html</a>
+    </li>
+  </ul>
+</div>
+
