--- a/Views/Shared/_sidebar.cshtml
+++ b/Views/Shared/_sidebar.cshtml
@@ -28,6 +28,7 @@
             <li> @Html.ActionLink("Home", "Index", "Admin")</li>
             <li> @Html.ActionLink("User", "Index", "User")</li>
             <li> @Html.ActionLink("Tutorial", "Index", "Tutorials")</li>
+            <li> @Html.ActionLink("Category", "Index", "Categories")</li>
             <li> @Html.ActionLink("Blog", "Index", "Blogs")</li>
         </ul>
     </section>
