--- a/Views/Blogs/Details.cshtml
+++ b/Views/Blogs/Details.cshtml
@@ -28,10 +28,10 @@
             @Html.DisplayFor(model => model.Row)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Category)
+            @Html.DisplayNameFor(model => model.ArticleCategory)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Category)
+            @Html.DisplayFor(model => model.ArticleCategory)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Content)
