--- a/Views/Blogs/Index.cshtml
+++ b/Views/Blogs/Index.cshtml
@@ -20,7 +20,7 @@
                 @Html.DisplayNameFor(model => model.Row)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Category)
+                @Html.DisplayNameFor(model => model.ArticleCategory)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.CreatedDate)
@@ -48,7 +48,7 @@
                     @Html.DisplayFor(modelItem => item.Row)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Category)
+                    @Html.DisplayFor(modelItem => item.ArticleCategory)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.CreatedDate)
