--- a/Views/Categories/Details.cshtml
+++ b/Views/Categories/Details.cshtml
@@ -17,10 +17,10 @@
             @Html.DisplayFor(model => model.Name)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Raw)
+            @Html.DisplayNameFor(model => model.Row)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Raw)
+            @Html.DisplayFor(model => model.Row)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Count)
