--- a/Views/Blogs/Create.cshtml
+++ b/Views/Blogs/Create.cshtml
@@ -15,9 +15,9 @@
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Category" class="control-label"></label>
-                <input asp-for="Category" class="form-control" />
-                <span asp-validation-for="Category" class="text-danger"></span>
+                <label asp-for="ArticleCategory" class="control-label"></label>
+                <input asp-for="ArticleCategory" class="form-control" />
+                <span asp-validation-for="ArticleCategory" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <img src="~/images/article/default_article.jpg" id="previewImage" alt="Alternate Text" width="200" height="200" />
