--- a/Views/Blogs/Edit.cshtml
+++ b/Views/Blogs/Edit.cshtml
@@ -17,9 +17,9 @@
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Category" class="control-label"></label>
-                <input asp-for="Category" class="form-control" />
-                <span asp-validation-for="Category" class="text-danger"></span>
+                <label asp-for="ArticleCategory" class="control-label"></label>
+                <input asp-for="ArticleCategory" class="form-control" />
+                <span asp-validation-for="ArticleCategory" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Row" class="control-label"></label>
