--- a/Views/Categories/Create.cshtml
+++ b/Views/Categories/Create.cshtml
@@ -18,9 +18,9 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Raw" class="control-label"></label>
-                <input asp-for="Raw" class="form-control" />
-                <span asp-validation-for="Raw" class="text-danger"></span>
+                <label asp-for="Row" class="control-label"></label>
+                <input asp-for="Row" class="form-control" />
+                <span asp-validation-for="Row" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Count" class="control-label"></label>
