--- a/Views/Categories/Index.cshtml
+++ b/Views/Categories/Index.cshtml
@@ -16,7 +16,7 @@
                 @Html.DisplayNameFor(model => model.Name)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Raw)
+                @Html.DisplayNameFor(model => model.Row)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Count)
@@ -31,7 +31,7 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Raw)
+                @Html.DisplayFor(modelItem => item.Row)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Count)
