--- a/Views/Tutorials/Create.cshtml
+++ b/Views/Tutorials/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model BrainStorm.ViewModel.ArticlesViewModel
+﻿@model BrainStorm.ViewModel.ArticleViewModel
 
 @{
     ViewData["Title"] = "Create";
@@ -16,7 +16,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="ArticleCategory" class="control-label"></label>
-                <select name="Category" class="form-control">
+                <select name="CategoryId" asp-for="ArticleCategory" class="form-control">
                     @foreach (var category in Model.ArticleCategory)
                     {
                         <option value="@category.Id">@category.Name</option>
