--- a/Views/Tutorials/Create.cshtml
+++ b/Views/Tutorials/Create.cshtml
@@ -22,6 +22,7 @@
                         <option value="@category.Id">@category.Name</option>
                     }
                 </select>
+                <a> @await Component.InvokeAsync("CategoryComponent")</a>
             </div>
         </div>
         <div class="col-md-4 pull-right">
