--- a/ClientApp/src/app/tutorial/tutorial.component.html
+++ b/ClientApp/src/app/tutorial/tutorial.component.html
@@ -1,10 +1,6 @@
 <div style="width: 25%;display: inline-block; vertical-align: top;">
 
-  <ul *ngFor="let category of categories">
-    <li>
-      <a [routerLink]="{{category.name}}" routerLinkActive="active">{{category.name}}</a>
-    </li>
-  </ul>
+  <!-- <app-category></app-category> -->
 
   <ul class="header-ul">
     <li>
