--- a/Views/Tutorials/Create.cshtml
+++ b/Views/Tutorials/Create.cshtml
@@ -15,14 +15,14 @@
                 <span asp-validation-for="Article.Title" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ArticleCategory" class="control-label"></label>
-                <select name="CategoryId" asp-for="ArticleCategory" class="form-control">
-                    @foreach (var category in Model.ArticleCategory)
+                <label asp-for="Category" class="control-label"></label>
+                <select name="CategoryId" class="form-control">
+                    @foreach (var category in Model.Category)
                     {
                         <option value="@category.Id">@category.Name</option>
                     }
                 </select>
-                <a> @await Component.InvokeAsync("CategoryComponent")</a>
+                @*<a> @await Component.InvokeAsync("CategoryComponent")</a>*@
             </div>
         </div>
         <div class="col-md-4 pull-right">
