--- a/ClientApp/src/app/tutorial/tutorial.component.html
+++ b/ClientApp/src/app/tutorial/tutorial.component.html
@@ -1,6 +1,6 @@
 <div style="width: 25%;display: inline-block; vertical-align: top;">
 
-  <app-category></app-category>
+  
 
   <ul class="header-ul">
     <li>
@@ -9,3 +9,4 @@
   </ul>
 </div>
 
+<app-header></app-header>
