--- a/ClientApp/src/app/tutorial/category/category.component.html
+++ b/ClientApp/src/app/tutorial/category/category.component.html
@@ -1,33 +1,6 @@
-<!-- <ul *ngFor="let category of categories">
+<ul *ngFor="let category of categories">
   <li routerLinkActive="active">
-<<<<<<< HEAD:ClientApp/src/app/category/category.component.html
       <a routerLink="{{category.name}}">{{category.name}} test </a>
-=======
       <a routerLink="category/{{category.name}}">{{category.name}}</a>
->>>>>>> ecb1ce4e4edece5a6e9474134e0691ba56b12c0f:ClientApp/src/app/tutorial/category/category.component.html
   </li>
-</ul> -->
-
-test
-<header>
-  <ul class="header-ul">
-    <li>
-      <a routerLink="home" routerLinkActive="active">Home</a>
-    </li>
-    <li>
-      <a routerLink="tutorial" routerLinkActive="active">Tutorail</a>
-    </li>
-    <li>
-      <a routerLink="about" routerLinkActive="active">About</a>
-    </li>
-    <li>
-      <a routerLink="admin" routerLinkActive="active" target="_parent">Login</a>
-    </li>
-  </ul>
-</header>
-
-<div class="container">
-  <router-outlet></router-outlet>
-</div>
-
-<footer style="margin-bottom: 100px"></footer>
+</ul>
