--- a/ClientApp/src/app/tutorial/category/category.component.html
+++ b/ClientApp/src/app/tutorial/category/category.component.html
@@ -1,5 +1,12 @@
-<ul *ngFor="let category of categories">
+<nav class="navbar navbar-light bg-light justify-content-between">
+  <a class="navbar-brand">Navbar</a>
+  <div class="form-inline">
+    <input class="form-control mr-sm-2" type="search" [(ngModel)]="searchStr">
+  </div>
+</nav>
+
+<ul *ngFor="let category of categories | search : searchStr">
   <li routerLinkActive="active">
-          <a routerLink="category/{{category.name}}">{{category.name}}</a>
+    <a routerLink="category/{{category.name}}" appTutorialHover>{{category.name}}</a>
   </li>
 </ul>
