--- a/ClientApp/src/app/tutorial/common/header/header.component.html
+++ b/ClientApp/src/app/tutorial/common/header/header.component.html
@@ -1,21 +1,34 @@
-<header>
-  <ul class="header-ul">
-    <li>
-      <a routerLink="home" routerLinkActive="active">Home</a>
-    </li>
-    <li>
-      <a routerLink="tutorial" routerLinkActive="active">Tutorail</a>
-    </li>
-    <li>
-      <a routerLink="about" routerLinkActive="active">About</a>
-    </li>
-    <li>
-      <a routerLink="admin" routerLinkActive="active" target="_parent">Login</a>
-    </li>
-  </ul>
-</header>
-
 <div class="container">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" routerLink="home" routerLinkActive="active">BrainStorm</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" routerLink="home">Home</a>
+        </li>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" routerLink="tutorial" >Tutorial</a>
+        </li>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" routerLink="about" >About</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link disabled" routerLink="admin" target="_parent">Login</a>
+          </li>
+      </ul>
+      <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      </form>
+    </div>
+  </nav>
+
+
+
   <router-outlet></router-outlet>
 </div>
 
