--- a/ClientApp/src/app/tutorial/category/category.component.html
+++ b/ClientApp/src/app/tutorial/category/category.component.html
@@ -1,9 +1,9 @@
-<nav class="navbar navbar-light bg-light justify-content-between">
-  <a class="navbar-brand">Navbar</a>
-  <div class="form-inline">
-    <input class="form-control mr-sm-2" type="search" [(ngModel)]="searchStr">
+
+<div class="row">
+  <div class="input-field col s6">
+    <input type="search" placeholder="search" [(ngModel)]="searchStr">
   </div>
-</nav>
+</div>
 
 <ul *ngFor="let category of categories | search : searchStr">
   <li routerLinkActive="active">
