--- a/ClientApp/src/app/tutorial/common/header/header.component.html
+++ b/ClientApp/src/app/tutorial/common/header/header.component.html
@@ -1,29 +1,22 @@
 <div class="container">
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" routerLink="home" routerLinkActive="active">BrainStorm</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-        <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" routerLink="home">Home</a>
+  <nav>
+    <div class="nav-wrapper">
+      <a href="#" class="brand-logo">BrainStorm</a>
+
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li  routerLinkActive="active">
+          <a  routerLink="home">Home</a>
         </li>
-        <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" routerLink="tutorial" >Tutorial</a>
+        <li  routerLinkActive="active">
+          <a  routerLink="tutorial">Tutorial</a>
         </li>
-        <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" routerLink="about" >About</a>
+        <li routerLinkActive="active">
+          <a  routerLink="about">About</a>
         </li>
-        <li class="nav-item">
-            <a class="nav-link disabled" routerLink="admin" target="_parent">Login</a>
-          </li>
+        <li>
+          <a routerLink="admin" target="_parent">Login</a>
+        </li>
       </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
     </div>
   </nav>
 
