--- a/Views/Tutorials/Index.cshtml
+++ b/Views/Tutorials/Index.cshtml
@@ -40,8 +40,8 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Row)
             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ArticleCategory.CategoryId)
+            <td> 
+                @Html.DisplayFor(modelItem => item.ArticleCategory)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.CreatedDate)
