--- a/ClientApp/src/app/tutorial/context/context.component.html
+++ b/ClientApp/src/app/tutorial/context/context.component.html
@@ -6,5 +6,4 @@
   </ul>
 </div>
 
-<!-- <app-article (article)="getArticle()" (outputIdToParent)="getArticleById()"></app-article> -->
-<app-article [articleId]="articleId"></app-article>
+<app-article></app-article>
