--- a/Views/Tutorials/Edit.cshtml
+++ b/Views/Tutorials/Edit.cshtml
@@ -43,7 +43,7 @@
     </div>
     <div class="form-group">
         <label asp-for="Article.Content" class="control-label"></label>
-        <textarea  id="editor"></textarea>
+        <textarea asp-for="Article.Content" id="editor"></textarea>
         <span asp-validation-for="Article.Content" class="text-danger"></span>
     </div>
     <div class="col-md-12">
@@ -79,16 +79,10 @@
 
     <script type="text/javascript" src="~/ckeditor/ckeditor.js"></script>
     <script type="text/javascript">CKEDITOR.replace('editor');</script>
+    <script type="text/javascript">CKEDITOR.config.skin = 'kama';</script>
+    <script type="text/javascript">CKEDITOR.config.language = 'az';</script>
+    <script type="text/javascript">CKEDITOR.config.height = '300';</script>
 
-    <script type="text/javascript">
-        CKEDITOR.editorConfig = function (config) {
-            config.language = 'az';
-            config.uiColor = '#F7B42C';
-            config.height = 300;
-            config.skin = 'kama';
-            config.toolbarCanCollapse = true;
-        };
-    </script>
 
     <script>
         function readURL(input) {
