--- a/ClientApp/src/app/tutorial/context/article/article.component.html
+++ b/ClientApp/src/app/tutorial/context/article/article.component.html
@@ -1,7 +1,5 @@
 <div>
-    <h3>{{article.title}}</h3>
+    <h1 class="title">{{article.title}}</h1>
 
-    <div [innerHTML]="article.content | safeHtml"> </div>
-
-    {{article.content}}
+    <div class="content" [innerHTML]="article.content | safeHtml"> </div>
 </div>
