--- a/ClientApp/src/app/tutorial/context/context.component.html
+++ b/ClientApp/src/app/tutorial/context/context.component.html
@@ -1,9 +1,15 @@
-<div class="left-sidebar">
-  <ul *ngFor='let article of articleList'>
-    <li >
-      <a [routerLink]="" [queryParams]="{ id: article.id }" appTutorialHover >{{article.title}}</a>
-    </li>
-  </ul>
-</div>
+<div class="full">
+  
+  <div class="left-sidebar">
+    <ul *ngFor='let article of articleList'>
+      <li>
+        <a [routerLink]="" [queryParams]="{ id: article.id }" appTutorialHover>{{article.title}}</a>
+      </li>
+    </ul>
+  </div>
 
-<app-article></app-article>
+  <div class="content">
+    <app-article></app-article>
+  </div>
+
+</div>
