--- a/ClientApp/src/app/tutorial/context/context.component.scss
+++ b/ClientApp/src/app/tutorial/context/context.component.scss
@@ -1,15 +1,26 @@
-.left-sidebar {
-    float: left;
-    width: 20%;
-    ul {
-        list-style: none;
-        padding-left: 0;
-        li {
-            a:hover,.active {
-                color: green;
-                text-decoration: none;
-                font-weight: bold;
+.full {
+    width: 100%;
+    height: 100%;
+    
+    .left-sidebar {
+        float: left;
+        width: 20%;
+        ul {
+            list-style: none;
+            padding-left: 0;
+            li {
+                a:hover,
+                .active {
+                    color: green;
+                    text-decoration: none;
+                    font-weight: bold;
+                }
             }
         }
+    }
+    .content {
+        height: 100%;
+        width: 80%;
+        float: right;
     }
 }
