--- a/ClientApp/src/app/tutorial/common/header/header.component.html
+++ b/ClientApp/src/app/tutorial/common/header/header.component.html
@@ -10,6 +10,9 @@
         <li  routerLinkActive="active">
           <a  routerLink="tutorial">Tutorial</a>
         </li>
+        <li  routerLinkActive="active">
+          <a  routerLink="blog">Blog</a>
+        </li>
         <li routerLinkActive="active">
           <a  routerLink="about">About</a>
         </li>
