--- a/ClientApp/src/app/tutorial/category/category.component.html
+++ b/ClientApp/src/app/tutorial/category/category.component.html
@@ -13,7 +13,7 @@
 <ul *ngFor="let category of categories | search : searchStr">
   <li routerLinkActive="active">
     <a 
-        routerLink="category/{{category.name}}"  
+        routerLink="category/{{category?.name}}"  
         appTutorialHover>{{category.name}}
     </a>
   </li>
