--- a/ClientApp/src/app/tutorial/tutorials/tutorials.component.html
+++ b/ClientApp/src/app/tutorial/tutorials/tutorials.component.html
@@ -3,7 +3,7 @@
   <div class="left-sidebar">
     <ul *ngFor='let article of articleList'>
       <li>
-        <a [routerLink]="" [queryParams]="{ id: article.id }" appTutorialHover>{{article.title}}</a>
+        <a [routerLink]="" [queryParams]="{ id: article?.id }" appTutorialHover>{{article?.title}}</a>
       </li>
     </ul>
   </div>
