--- a/ClientApp/src/app/tutorial/tutorials/article/article.component.html
+++ b/ClientApp/src/app/tutorial/tutorials/article/article.component.html
@@ -1,5 +1,5 @@
 <div>
-    <h1 class="title">{{article.title}}</h1>
+    <h1  class="title">{{article?.title}}</h1>
 
-    <div class="content" [innerHTML]="article.content | safeHtml"> </div>
+    <div class="content" [innerHTML]="article?.content | safeHtml"> </div>
 </div>
