--- a/ClientApp/src/app/tutorial/category/category.component.html
+++ b/ClientApp/src/app/tutorial/category/category.component.html
@@ -1,5 +1,4 @@
 <div class="row">
-  <div class="input-field col s6">
     <input 
           type="search" 
           placeholder="search" 
@@ -7,12 +6,11 @@
           [(ngModel)]="searchStr"> 
 
     <p>Tab bas</p>
-  </div>
 </div>
 
 <ul *ngFor="let category of categories | search : searchStr">
   <li routerLinkActive="active">
-    <a 
+    <a  @fade
         routerLink="category/{{category?.name}}"  
         appTutorialHover>{{category.name}}
     </a>
