--- a/Views/Blogs/Details.cshtml
+++ b/Views/Blogs/Details.cshtml
@@ -40,10 +40,10 @@
             @Html.DisplayFor(model => model.Content)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Picture)
+            @Html.DisplayNameFor(model => model.Image)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Picture)
+            @Html.DisplayFor(model => model.Image)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Like)
