--- a/Views/Blogs/Edit.cshtml
+++ b/Views/Blogs/Edit.cshtml
@@ -35,9 +35,9 @@
         <div class="col-md-4 pull-right">
 
             <div class="form-group pull-right">
-                <img src="~/@Model.Article.Picture" id="previewImage" alt="Alternate Text" width="200" height="200" />
+                <img src="~/@Model.Article.Image" id="previewImage" alt="Alternate Text" width="200" height="200" />
                 <input type="file" id="uploadImage" name="files" width="200" height="200" multiple />
-                <span asp-validation-for="Article.Picture" class="text-danger"></span>
+                <span asp-validation-for="Article.Image" class="text-danger"></span>
             </div>
         </div>
     </div>
