--- a/Views/User/Edit.cshtml
+++ b/Views/User/Edit.cshtml
@@ -10,9 +10,9 @@
         <div class="row col-sm-12">
             <div class="col-sm-3">
                 <div class="form-group pull-right">
-                    <img src="~/@Model.AvatarImage" alt="Alternate Text" width="200" height="200" />
+                    <img src="~/@Model.Image" alt="Alternate Text" width="200" height="200" />
                     <input type="file" name="files" width="200" height="200" multiple />
-                    <span asp-validation-for="AvatarImage" class="text-danger"></span>
+                    <span asp-validation-for="Image" class="text-danger"></span>
                 </div>
                 <div>
                     <div class="panel-heading">Website <i class="fa fa-link fa-1x"></i></div>
