--- a/Views/User/Index.cshtml
+++ b/Views/User/Index.cshtml
@@ -10,7 +10,7 @@
 <div class="container bootstrap snippeQt">
     <div class="row col-sm-12">
         <div class="col-sm-3">
-            <img src="~/@Model.AvatarImage" alt="Alternate Text" width="200" height="200" />
+            <img src="~/@Model.Image" alt="Alternate Text" width="200" height="200" />
             <div class="margin"><a href="http://tutorial.az">tutorial.az</a></div>
 
 
