--- a/Views/Tutorials/Create.cshtml
+++ b/Views/Tutorials/Create.cshtml
@@ -31,7 +31,7 @@
             <div class="form-group pull-right">
                 <img src="~/images/article/default_article.jpg" id="previewImage" alt="Alternate Text" width="200" height="200" />
                 <input type="file" id="uploadImage" name="files" width="200" height="200" multiple />
-                <span asp-validation-for="Article.Picture" class="text-danger"></span>
+                <span asp-validation-for="Article.Image" class="text-danger"></span>
             </div>
         </div>
     </div>
