--- a/ClientApp/src/app/tutorial/common/header/header.component.html
+++ b/ClientApp/src/app/tutorial/common/header/header.component.html
@@ -13,6 +13,9 @@
         <li  routerLinkActive="active">
           <a  routerLink="blog">Blog</a>
         </li>
+        <li  routerLinkActive="active">
+          <a  routerLink="chat">Chat</a>
+        </li>
         <li routerLinkActive="active">
           <a  routerLink="about">About</a>
         </li>
