--- a/ClientApp/src/app/view/tutorials/tutorials.component.html
+++ b/ClientApp/src/app/view/tutorials/tutorials.component.html
@@ -1,5 +1,5 @@
 <div class="full">
-  
+
   <div class="left-sidebar">
     <ul *ngFor='let article of articleList'>
       <li routerLinkActive="active">
@@ -9,7 +9,7 @@
   </div>
 
   <div class="content">
-    <app-article></app-article>
+    <app-category></app-category>
   </div>
 
 </div>
