--- a/ClientApp/src/app/shared/components/chat/chat.component.html
+++ b/ClientApp/src/app/shared/components/chat/chat.component.html
@@ -30,7 +30,7 @@
           <div class="input_msg_write">
             <input type="text" class="write_msg" [value]="txtMessage"
             (input)="txtMessage=$event.target.value" (keydown.enter)="sendMessage()" placeholder="Type a message" />
-            <button class="msg_send_btn" type="button"  (click)="sendMessage()"><i class="fa fa-paper-plane-o" aria-hidden="true"></i></button>
+            <button class="msg_send_btn" type="button"  (click)="sendMessage()"><i class="fa fa-paper-plane-o" aria-hidden="true">Send</i></button>
           </div>
         </div>
       </div>
